- Re-open files in the correct order. - Save the order in which project files were opened.

BUG: 125878