kile/kileproject.cpp
@@ -47,13 +47,19 @@ KileProjectItem::KileProjectItem(KileProject *project, const KURL & url, int typ
 	m_parent(0L),
 	m_child(0L),
 	m_sibling(0L),
-	m_nLine(0)
+	m_nLine(0),
+	m_order(-1)
 {
 	m_highlight=m_encoding=QString::null;
 	m_bOpen = m_archive = true;
 
 	if (project)
 		project->add(this);
+}
+
+void KileProjectItem::setOrder(int i)
+{
+	m_order = i;
 }
 
 void KileProjectItem::setParent(KileProjectItem * item)
@@ -365,6 +371,7 @@ bool KileProject::load()
 			item->setArchive(m_config->readBoolEntry("archive", true));
 			item->setLineNumber(m_config->readNumEntry("line", 0));
 			item->setColumnNumber(m_config->readNumEntry("column", 0));
+			item->setOrder(m_config->readNumEntry("order", -1));
 			item->changePath(groups[i].mid(5));
 
 			connect(item, SIGNAL(urlChanged(KileProjectItem*)), this, SLOT(itemRenamed(KileProjectItem*)) );
@@ -411,6 +418,7 @@ bool KileProject::save()
 		m_config->writeEntry("archive", item->archive());
 		m_config->writeEntry("line", item->lineNumber());
 		m_config->writeEntry("column", item->columnNumber());
+		m_config->writeEntry("order", item->order());
 	}
 
 	KileTool::setConfigName("QuickBuild", quickBuildConfig(), m_config);
